# kinect_pose

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  kinect_pose_plugin.xml  package.xml
src/include/: icp_wrapper.hpp  kinect.hpp  kinectPosePlugin.hpp
src/src/: kinectPosePlugin.cpp  main.cpp
