<?xml version="1.0"?>
<package>
    <name>kinect_pose</name>
    <version>0.0.0</version>
    <description>kinect pose rviz plugin using icpcuda</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>rviz</build_depend>

    <run_depend>rviz</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>pluginlib</run_depend>

    <export>
        <rviz plugin="${prefix}/kinect_pose_plugin.xml"/>
    </export>
</package>
